tests/fixtures/invalid/set_div_str.py
# Cannot divide Set[int] and Str
x: float = {1, 2, 3} / "hello"
